# Transcribation_bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260220_01_init_jobs_and_transcripts.py  20260220_02_add_original_filename_to_jobs.py  20260220_03_add_telegram_users.py
docs/: api-spec.md  windows-autostart.md
scripts/: register_autostart_task.ps1  start_server.ps1
src/app/: dependencies.py  main.py
src/app/api/: routes.py
src/app/asr/: engine.py  factory.py  faster_whisper_engine.py  gigaam_engine.py
src/app/bot/: __init__.py  handlers.py  runner.py  service.py
src/app/core/: config.py  request_id.py  security.py
src/app/db/: models.py  repository.py  session.py
src/app/media/: processing.py
src/app/schemas/: jobs.py
src/app/storage/: redis_cache.py
src/app/tasks/: __init__.py  manager.py
tests/: conftest.py  test_api.py  test_telegram_bot_service.py
